my landing page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <h2>How it works</h2>
       <div class="cards">
         <div class="card">
+          <img src="images/flight-schedule.jpg" alt="">
+          <h3>Find a destination</h3>
+        </div>
+        <div class="card">
           <img src="images/eiffeil-tower.jpg" alt="">
           <h3>Select activities</h3>
         </div>
