my landing page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- code a Hero / Banner section -->
   <section class="hero-banner">
     <div class="container">
-      <h1>Where your trip begins...</h1>
-      <p>The best planning tool for the best travels</p>
+      <h1>City Trip Planner</h1>
+      <p>The easiest way to find, organize and share a city trip</p>
       <a class="btn-start" href=""> Start your trip!</a>
     </div>
   </section>
